--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,13 @@ android {
     compileSdkVersion 30
     buildToolsVersion "30.0.2"
 
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+
+
     defaultConfig {
         applicationId "com.example.myweather"
         minSdkVersion 22
@@ -30,6 +37,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation "androidx.room:room-runtime:2.2.5"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.14.7'
     annotationProcessor "androidx.room:room-compiler:2.2.5"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
