--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation "androidx.room:room-runtime:2.2.5"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.7'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.14.7'
     annotationProcessor "androidx.room:room-compiler:2.2.5"
